# hermes-flywheel

./: .env.EXAMPLE  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SOUL.md  config.yaml  distribution.yaml  mcp.json  pyproject.toml
.github/workflows/: ci.yml
cron/: weekly-gtm-sprint.json
data/: leads.example.csv  product_profile.example.json
demo/demo-output/: backlink_opportunities.json  backlink_opportunities.md  creator_campaign.json  creator_campaign.md  launch_plan.json  launch_plan.md  mpp_receipts.json  mpp_spend_cards.json  mpp_spend_cards.md  outbound_queue.json  outbound_queue.md  trend_content.json  trend_content.md  weekly_flywheel_sprint.json  weekly_flywheel_sprint.md
demo/demo-output/runs/: latest_run.json
docs/: distribution.md  slack-gtm-employee.md  sponsor-integrations.md  technical-spec.md  testing-plan.md
skills/flywheel-agent/: SKILL.md
skills/flywheel-agent/scripts/: _common.py  approvals.py  backlink_hunter.py  creator_campaign.py  flywheel.py  flywheel_intake.py  launch_plan.py  lead_scorer.py  mpp_spend_planner.py  research.py  sprint_ledger.py  sprint_report.py  stripe_client.py  trend_scan.py  validate_outputs.py
skills/flywheel-agent/templates/: sample-competitors.txt  sample-product.md  weekly-sprint-template.md
tests/: test_completeness.py  test_entrypoint.py  test_flywheel_loop.py  test_hardening.py  test_output_quality.py  test_partial_safety.py  test_provenance.py  test_research.py  test_stripe_client.py  test_units.py
